log
Thu 21 Mar 2024 03:46:15 PM UTC: 
 tests:  0|5
total_score: 0/70
6766134
Thu 21 Mar 2024 03:49:44 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
d69fa49
Thu 21 Mar 2024 03:50:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4191a0a
Thu 21 Mar 2024 04:00:11 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
599e16c
Thu 21 Mar 2024 08:07:02 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
74cf533
